tests/int/use_command/snapshots/integration__int__use_command__basic_output__modules_advanced_globs.snap
---
source: tests/int/use_command/basic_output.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - advanced_globs
---
success: true
exit_code: 0
----- stdout -----
crate::advanced_globs::aliased_module::OriginalStruct as AliasedStruct
crate::advanced_globs::aliased_module::original_name as renamed_func
crate::advanced_globs::enum_variants::*
crate::advanced_globs::internal::*
crate::advanced_globs::layer1::*
crate::advanced_globs::macro_module::*
crate::advanced_globs::original::*
crate::advanced_globs::shadowing::shadowed_func
crate::advanced_globs::trait_providers::*
crate::advanced_globs::unix_specific::*
crate::advanced_globs::windows_specific::*
crate::dir_module::child_file
crate::file_module
crate::visibility

----- stderr -----
