tests/int/use_command/snapshots/integration__int__use_command__basic_output__modules_aliased.snap
---
source: tests/int/use_command/basic_output.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - aliased
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Module 'aliased' not found
