tests/int/use_command/snapshots/integration__int__use_command__basic_output__modules_custom_path.snap
---
source: tests/int/use_command/basic_output.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - custom_path
---
success: true
exit_code: 0
----- stdout -----
crate::aliased
crate::item_visibility::PUB_CONST

----- stderr -----
