tests/int/use_command/snapshots/integration__int__use_command__basic_output__modules_dir_module.snap
---
source: tests/int/use_command/basic_output.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - dir_module
---
success: true
exit_code: 0
----- stdout -----
crate::inline_modules::nested::deep::value

----- stderr -----
