tests/int/use_command/snapshots/integration__int__use_command__basic_output__modules_file_module.snap
---
source: tests/int/use_command/basic_output.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - file_module
---
success: true
exit_code: 0
----- stdout -----
crate::nesting

----- stderr -----
