tests/int/use_command/snapshots/integration__int__use_command__basic_output__modules_glob_showcase.snap
---
source: tests/int/use_command/basic_output.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - glob_showcase
---
success: true
exit_code: 0
----- stdout -----
crate::file_module::*
crate::inline_modules::*
crate::nesting::level1::level2::*

----- stderr -----
